--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -121,7 +121,8 @@
 
   .product-images {
     position: sticky;
-    top: 20px;
+    top: 100px;
+    align-self: flex-start;
   }
 
   .product-images img {
