--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -6,7 +6,7 @@
 <header class="site-header">
   <div class="header-container">
     <a href="/" class="logo">
-      <span class="logo-icon">🎯</span>
+      <img src="{{ 'logo.jpg' | asset_url }}" alt="Market Sniper Logo" class="logo-image">
       <span class="logo-text">Market Sniper</span>
     </a>
 
@@ -64,8 +64,11 @@
     opacity: 0.8;
   }
 
-  .logo-icon {
-    font-size: 1.5rem;
+  .logo-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
   }
 
   .logo-text {
